--- a/css/style.css
+++ b/css/style.css
@@ -5,25 +5,37 @@
 .header {
     width: 100%;
     border: 1px solid;
-    padding: 10px;
+    padding: 20px;
     display: grid;
     grid-template-columns: 1fr 7fr 2fr;
+    /* align-content: center; */
+    align-items: center;
+    position: fixed;
+    top: 0px;
+    z-index: 1;
+    background-color: white;
 }
 
 .header .logo {
 
     border: 1px solid;
-    padding: 10px;
+
+    
+    
 }
 
 .header .nav {
 
     border: 1px solid;
-    padding: 10px;
-   /*  background: lightpink; */
     text-align: center;
     font-family: sans-serif;
+    /* align-content: center; */
 }
+
+.header .fa-bars{
+    display: none;
+}
+
 
 .header .nav .menu {
     list-style: none;
@@ -32,34 +44,39 @@
     display: inline;
     border: 2px solid purple;
     text-transform: uppercase;
-    padding: 20px 25px;
+    margin: 0px 20px;
+    padding: 20px 0px;
     position: relative;
 
 }
 
 .header .nav .menu .fa-angle-down { margin-left: 8px;}
 
-.header .nav .menu a { 
+.header .nav .menu .a1 { 
     text-decoration: none;
     color: black;
     
 }
 
 
-.header .nav .menu:hover a {color:  #91ad41;}
+
+.header .nav .menu .a1:after {content: ' \02C5';}
+
+
+.header .nav .menu:hover .a1 {color:  #91ad41;}
 .header .nav .menu:hover .fa-angle-down {color:  #91ad41;}
 
 
 .header .nav .menu .sub {
     
     position: absolute;
-    top: 56px;
+    top: 100%;
     left: 0px;
     background: white;
     display: none;
     z-index: 1;
     border-top: 2px solid;
-    color: #8d8d99;
+    color: #91ad41;
     
 }
 
@@ -70,28 +87,73 @@
     padding: 10px;
 }
 
-.header .nav .menu:hover .sub{ display: block;}
+.header .nav .menu .sub li a {
+    color: black; 
+    text-decoration: none;
+}
+.header .nav .menu .sub li:hover a{ 
+    color: #91ad41;
+}
+.header .nav .menu:hover .sub{ 
+    display: block;
+}
+
+
+
+.header .nav .menu .dropdown {
+    position: absolute;
+    top: 100%;
+    /* right: 0px; */
+    right: -480px;
+    background: white;
+    display: none;
+    z-index: 1;
+    border-top: 2px solid;
+    color: #91ad41;
+    background-color: lightblue;
+    width: 1240px;
+}
+
+
+
+.header .nav .menu .dropdown li {
+    list-style: none;
+    width: 200px;
+    text-align: left;
+    padding: 10px;
+}
+
+.header .nav .menu .dropdown li a {
+    color: black; 
+    text-decoration: none;
+}
+.header .nav .menu .dropdown li:hover a{ 
+    color: #91ad41;
+}
+.header .nav .menu:hover .dropdown{ 
+    display: block;
+}
+
+
+.header .nav .menu .dropdown .p1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    border: 1px solid;
+    background: url(../images/oar1-pagemenu-bg.webp) ;
+ 
+    background-size: cover;
+}
+
 
 .header .header-right {
 
     border: 1px solid;
-    padding: 10px;
+    
     text-align: center;
     font-size: 22px;
 }
 
-.header .header-right .search {
-    border: 1px solid;
-    position: relative;
-}
-.header .header-right .search .search-box{
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    border: 1px solid;
-    /* width: 40%; */
-    background: white;
-}
+
 
 .header .header-right a{ 
     margin: 0px 5px; 
@@ -99,6 +161,9 @@
     color: black;
 }
 
+.header .header-right .fa-bars{
+    display: inline-block;
+}
 .header .header-right a .fa-bag-shopping {
     position: relative;
 }
@@ -126,11 +191,14 @@
 .slider {
     
     background: url(../images/oar1-sl1_1944x.webp) no-repeat;
-   /*  background-size: 100% 100%; */
-    background-size: cover;
+    background-size: 100% 100%;
+    /* background-size: cover; */
     position: relative;
      height: 600px; 
-    /* border: 2px solid ; */
+     margin-top: 100px;
+    border: 2px solid ; 
+    /* display: grid;
+    grid-template-columns: 1fr 1fr; */
 
 }
 
@@ -139,7 +207,10 @@
     top: 108px;
     left: 95px;
     text-align: center;
+    border: 1px solid;
 }
+
+.slider .text img { height: 100%; width: 100%;}
 
 .slider .text p { 
     color: #8d8d99;
@@ -150,7 +221,7 @@
     background-color: #91ad41;
     color: white;
     border-radius: 10px;
-    margin: 20px 0px;
+    margin: 10px 0px;
     border: none;
     padding: 15px 25px;
     text-transform: uppercase;
@@ -163,8 +234,166 @@
     transition: .5s;
 }
 
-
-
-
-
 /* Slider css end */
+
+
+
+.container {
+    display: grid;
+    grid-template-rows: 2fr 2fr;
+    border: 1px solid red;
+    padding: 15px;
+    background: url(../images/oar2-bg_who-we-are_1.webp) no-repeat;
+    background-size: 100% 100%;
+
+}
+
+.container .about{
+    border: 2px solid;
+    padding: 10px;
+    font-family:'streamster', sans-serif;
+}
+
+.container .about .about-rows {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    border: 2px solid coral;
+    padding: 20px;
+}
+
+.container .about .about-rows .box {
+    border: 2px solid magenta;
+    padding: 15px;
+    text-align: center;
+}
+
+.container .about .about-rows .box h4{
+    font-weight: bold;
+    font-family: 'poppins';
+    margin:10px 0px;
+    padding: 0px;
+    text-align: center;
+}
+
+.container .about .about-rows .box p{
+    line-height: 20px;
+    text-align: center;
+    font-size: 14px;
+    width: 85%;
+}
+
+.container .about h3 {
+    font-family:'streamster', sans-serif;
+    text-align: center;
+    letter-spacing: 2px;
+    margin: 0px;
+    padding: 0px;
+    color: #91ad41;
+}
+
+.container .about h1 {
+    font-family:'poppins', sans-serif;
+    text-align: center;
+    margin: 0px;
+    padding: 0px 0px 22px 0px;
+    background: url(../images/oar1_ico_title_150x.webp);
+    /* background-size: 100% 100%; */
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: center bottom;
+}
+
+.container .about p {
+    font-family:'poppins', sans-serif;
+    text-align: center;
+    margin: 20px auto;
+    /* padding: 0px 30px; */
+    color: #8d8d99;
+    width: 55%;
+    border: 1px solid;
+    font-weight: normal;
+    letter-spacing: 1px;
+
+}
+
+.container .bottom{
+    border: 2px solid coral;
+    padding: 40px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.container .bottom .bottom-right {
+    border: 1px solid;
+    padding: 30px;
+    align-content: center;
+
+}
+
+
+.container .bottom .bottom-right h1 {
+    font-family:'poppins', sans-serif;
+    
+    margin: 0px;
+    padding: 0px 0px 22px 0px;
+    background: url(../images/oar1_ico_title_150x.webp);
+    /* background-size: 100% 100%; */
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: left bottom;
+}
+
+.container .bottom .bottom-right h3 {
+    font-family:'streamster', sans-serif;
+    letter-spacing: 3px;
+    margin: 0px;
+    padding: 0px;
+    color: #91ad41;
+}
+
+.container .bottom .bottom-right p {
+    font-family:'poppins', sans-serif;
+    text-align: center;
+    margin: 20px 0px;
+    /* padding: 0px 30px; */
+    color: #8d8d99;
+    width: 100%;
+    border: 1px solid;
+    font-weight: normal;
+    letter-spacing: 1px;
+
+}
+
+
+
+.container .bottom .bottom-right button {
+    background-color: #91ad41;
+    color: white;
+    border-radius: 10px;
+    margin: 10px 0px;
+    border: none;
+    padding: 15px 25px;
+    text-transform: uppercase;
+}
+
+.container .bottom .bottom-right button:hover {
+    background-color: white;
+    color: #8d8d99;
+    border: 1px solid #8d8d99;
+    transition: .2s;
+}
+
+.container .bottom .bottom-left {
+    border: 1px solid;
+   
+ 
+}
+
+
+
+.container .bottom .bottom-left img {
+    /* padding: 10px; */
+    width: 100%;
+    height: 100%;
+
+}
