--- a/css/media.css
+++ b/css/media.css
@@ -5,9 +5,11 @@
     }
     .header .logo { text-align: center; 
         margin: 15px 0px;
+        /* display: none; */
     }
     .header .logo img { 
-        width: 30%; 
+        /* width: 30%;  */
+        display: none;
     }
     .header .fa-bars{ 
         display: block;
@@ -17,6 +19,12 @@
 
         
     }
+
+    .header .logo .left {
+    display: block;
+}
+
+
     .slider .text img { 
         height: 30%; 
         width: 30%;
@@ -168,10 +176,25 @@
             .testimonial .box-container{ grid-template-columns: 1fr;}
 
             
-.testimonial {    grid-template-rows: 1fr 1fr;}
+            .testimonial {    grid-template-rows: 1fr 1fr;}
             .testimonial .testimonial-top .box-container{ grid-template-columns: 1fr;}
 
             .testimonial .testimonial-btm { grid-template-columns: 1fr 1fr;}
+            .footer .newsletter { grid-template-columns: 1fr;}
+            .footer .newsletter .right {
+                padding: 0px;
+            }
+
+            .footer .newsletter .left h3 {
+                text-align: center;
+            }
+
+            .footer .newsletter .left h1 {
+                text-align: center;
+                font-size: 28px;
+            }
+
+            .contact { grid-template-columns: 1fr;}
       
 }
 
