--- a/css/style.css
+++ b/css/style.css
@@ -1423,7 +1423,7 @@ padding: 0 10px 0 0;
     background-position: left top;
     height: 250px; */
     position: relative;
-    z-index: 0;
+    
     
 }
 
@@ -1445,13 +1445,167 @@ padding: 0 10px 0 0;
     border: 1px solid;
     background-color: #f7eee2;
     padding: 20px;
-    position: absolute;
+   /*  position: absolute;
     top: 0;
     left: 0px;
     width: 100%;
-    z-index: 0;
+    z-index: 0; */
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     
     
 }
+.footer .newsletter .left {
+    border: 1px solid;
+    padding: 30px;
+}
+
+.footer .newsletter .left h3 {
+    font-family:'streamster', sans-serif;
+    text-align: left;
+    letter-spacing: 5px;
+    margin: 0px;
+    padding: 0px;
+    color: #91ad41;
+    font-size: 22px;
+    
+}
+
+.footer .newsletter .left h1 {
+    font-family:'poppins', sans-serif;
+    text-align: left;
+    margin: 0px;
+    padding: 0px 0px 22px 0px;
+   
+    font-size: 35px;
+}
+
+.footer .newsletter .right{
+    border: 1px solid;
+    padding: 30px;
+    align-content: center;
+}
+
+.footer .newsletter .right input {
+    outline: none;
+    padding: 15px;
+    border: none;
+    width: 300px;
+    border-radius: 10px;
+}
+
+
+.footer .newsletter .right button {
+    background-color: #91ad41;
+    color: white;
+    border-radius: 10px;
+    margin: 10px 0px;
+    border: none;
+    padding: 15px 25px;
+    text-transform: uppercase;
+    
+}
+
+.footer .newsletter .right button:hover {
+    background-color: white;
+    color: #8d8d99;
+    border: 1px solid #8d8d99;
+    transition: .5s;
+}
+
+
+.contact {
+    border: 2px solid coral;
+    display: grid;
+    grid-template-columns: 3fr 2fr 2fr 3fr;
+    padding:15px;
+    margin: 50px 0px 80px 0px;
+    background-image: url(../images/Oars1-logo-bg.png) ;
+    background-repeat: no-repeat;
+    background-position:right bottom;
+    
+}
+
+.contact .c1 {
+    margin: 10px 0px;
+    padding: 0px;
+    border: 1px solid;
+    
+    
+}
+.contact .c1 h3{
+    font-family: 'poppins';
+    font-weight: normal;
+    font-size: 16px;
+    margin: 10px 0px;
+}
+
+.contact .c1 p{
+    font-family: 'poppins';
+    font-weight: normal;
+    font-size: 14px;
+    color: #888888;
+    margin-top: 10px;
+}
+
+.contact .c1 p span{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #f4fcdc;
+    display: inline-block;
+    text-align: center;
+    margin: 0 10px 0 0;
+}
+
+.contact .c2 {
+    padding: 4px;
+    
+    text-align: center;
+    background: linear-gradient(57deg, rgba(232, 218, 199, 1) 8%,
+                rgba(250, 233, 235, 1) 83%, rgba(250, 233, 235, 1) 96%, 
+                rgba(232, 218, 199, 1) 100%);
+    
+}
+
+.contact .c2 .box {
+
+background-color: white;
+padding: 10px;
+
+}
+
+.contact .c2 .box p{
+    font-family: 'poppins';
+    font-weight: normal;
+    font-size: 14px;
+    padding: 30px;
+    color: #bcbbbb;
+}
+
+
+
+
+.contact .c1 p span .fa-location-dot{
+    color: #65792c;
+}
+
+.footer-btm {
+    width: 100%;
+    background-color: #f7eee2;
+    text-align: center;
+    padding: 15px;
+}
+
+.footer-btm h3 {
+    margin: 0px;
+    padding: 0px;
+    font-family: 'poppins';
+    font-weight: normal;
+    font-size: 14px;
+}
+
+
+
 
 /* <!---------------------------------------------- footer end-------------------------------------> */
