--- a/css/style.css
+++ b/css/style.css
@@ -139,9 +139,10 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     border: 1px solid;
-    background: url(../images/oar1-pagemenu-bg.webp) ;
+    background: url(../images/oar1-pagemenu-bg.webp) no-repeat;
  
-    background-size: cover;
+    background-size: contain;
+    background-position: right;
 }
 
 
@@ -689,6 +690,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     
+    
 }
 
 .product-contaner .products .box {
@@ -696,7 +698,7 @@
    /* border: 1px solid #000; */
    /* padding: 10px; */
    margin: 10px;
-   transition: .2s;
+   
    position: relative;
 }
 
@@ -764,7 +766,8 @@
 
 
 .product-contaner .products .box .hover-icons {
-    display: none;
+    /* display: none; */
+    opacity: 0;
     border: 1px solid;
     border-radius:10px ;
     padding: 5px;
@@ -774,6 +777,7 @@
     bottom: 144px;
     left: 67px;
     background: #fff;
+    transition: .7s;
    
    
     
@@ -784,7 +788,8 @@
 }
 
 .product-contaner .products .box:hover .hover-icons {
-    display: block;
+    /* display: block; */
+    opacity: 1;
 }
 
 
