--- a/css/style.css
+++ b/css/style.css
@@ -395,7 +395,7 @@
 .container .bottom .bottom-left img {
     /* padding: 10px; */
     width: 100%;
-    height: 100%;
+    height: auto;
 
 }
 
@@ -1370,36 +1370,35 @@ padding: 0 10px 0 0;
 
 .testimonial .testimonial-btm .main {
 
-    height: 200px;
+    /* height: 200px; */
     width: 200px;
+    text-align: center;
+    /* line-height: 100px; */
+    margin: 50px auto;
     position: relative;
+    overflow: hidden;
+    /* border: 1px solid; */
 }
 
 .testimonial .testimonial-btm .main .front {
 
-    height: inherit;
-    width: inherit;
     position: absolute;
-    top: 0px;
-    left: 0px;
-    transform: translateY(0%);
-    transition: 1s;
-    /* backface-visibility: hidden; */
+    top:0;
+    left:0;
+    transform: scale(1);
+    transition: .5s;
 }
 
 .testimonial .testimonial-btm .main .back {
     position: absolute;
-    top: 0px;
-    left: 0px;
-    transform: translateY(100%);
-    transition: 1s;
-    visibility: hidden;
-    /* backface-visibility: hidden; */
+    top:100%;
+    left:0;
+    transition: .5s;
 }
 
-.testimonial .testimonial-btm .main:hover .back {transform: translateY(0%); visibility: visible;}
+.testimonial .testimonial-btm .main:hover .back {top:0px}
 
-.testimonial .testimonial-btm .main:hover .front {transform: translateY(50%); visibility: hidden;}
+.testimonial .testimonial-btm .main:hover .front { transform: scale(0);}
 
 
 /* <!---------------------------------------------- Testimonial part end-------------------------------------> */
@@ -1449,7 +1448,7 @@ padding: 0 10px 0 0;
 .footer .newsletter {
     border: 1px solid;
     background-color: #f7eee2;
-    padding: 20px;
+    /* padding: 20px; */
    /*  position: absolute;
     top: 0;
     left: 0px;
@@ -1462,7 +1461,8 @@ padding: 0 10px 0 0;
 }
 .footer .newsletter .left {
     border: 1px solid;
-    padding: 30px;
+    padding: 50px;
+    background: url(../images/bg1.png) no-repeat top left;
 }
 
 .footer .newsletter .left h3 {
@@ -1489,6 +1489,7 @@ padding: 0 10px 0 0;
     border: 1px solid;
     padding: 30px;
     align-content: center;
+    background: url(../images/bg2.avif) no-repeat top right;
 }
 
 .footer .newsletter .right input {
@@ -1525,9 +1526,9 @@ padding: 0 10px 0 0;
     grid-template-columns: 3fr 2fr 2fr 3fr;
     padding:15px;
     margin: 50px 0px 80px 0px;
-    background-image: url(../images/Oars1-logo-bg.png) ;
+   /*  background-image: url(../images/Oars1-logo-bg.png) ;
     background-repeat: no-repeat;
-    background-position:right bottom;
+    background-position:right bottom; */
     
 }
 
@@ -1564,23 +1565,32 @@ padding: 0 10px 0 0;
 }
 
 .contact .c2 {
-    padding: 4px;
+    padding: 20px;
     
     text-align: center;
-    background: linear-gradient(57deg, rgba(232, 218, 199, 1) 8%,
+   /*  background: linear-gradient(57deg, rgba(232, 218, 199, 1) 8%,
                 rgba(250, 233, 235, 1) 83%, rgba(250, 233, 235, 1) 96%, 
-                rgba(232, 218, 199, 1) 100%);
+                rgba(232, 218, 199, 1) 100%); */
+
+    border: 6px solid;
+    border-image: linear-gradient( rgba(232, 218, 199, 1) 8%,
+    rgba(250, 233, 235, 1) 83%, rgba(250, 233, 235, 1) 96%, 
+    rgba(232, 218, 199, 1) 100%);
+    border-image-slice: 80;
+    background-image: url(../images/Oars1-logo-bg.png) ;
+    background-repeat: no-repeat;
+    background-position:right bottom;
     
 }
 
-.contact .c2 .box {
+/* .contact .c2 .box {
 
 background-color: white;
 padding: 10px;
 
-}
+} */
 
-.contact .c2 .box p{
+.contact .c2 p{
     font-family: 'poppins';
     font-weight: normal;
     font-size: 14px;
